Fix email placeholder truncations

--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -27,6 +27,7 @@
   input, select {
     font-family: Fira Sans Condensed;
     letter-spacing: 0.03rem;
+    font-size: 90%;
     color: #5b555c;
     width: 100%;
     display: block;
